src/assets/web/widgets.less
.hrzg-widget-widget-container {

  min-height: 48px;
  position: relative;

  &:hover {
    outline: 2px dotted #ccc;
    .hrzg-widget-container-controls {
      opacity: 1;
    }
    .hrzg-widget-widget-controls {
      opacity: 0.1;
    }
  }

  .hrzg-widget-widget-controls {
    opacity: 0;
    position: absolute;
    z-index: 999;
    top: -1.5em;
    background: white;
  }

  .hrzg-widget-container-controls {
    opacity: 0;
    position: absolute;
    left: 0;
    bottom: -2.5em;
    z-index: 999;
    //top: -2.75em;
    button {
      //background: white;
    }
  }

  .hrzg-widget-widget {
    min-height: 32px;
    position: relative;
    &:hover {
      outline: 3px solid #eee;
      .hrzg-widget-container-controls, .hrzg-widget-widget-controls {
        opacity: 1;
      }
    }
  }
}

.selectize-control {
  &.single.loading {
    .selectize-input {
      background: #eee;
    }
  }
  .selectize-dropdown-content {
    min-height: 300px;
  }
}

